--- a/common/lib/Scannie_css.css
+++ b/common/lib/Scannie_css.css
@@ -85,9 +85,15 @@ body {
 td.highlight:hover, tr.highlight:hover  {
     background-color: #f2f2f2;
 }
+td.bhighlight:hover, 
+tr.bhighlight:hover {
+    background-color: #fcc679;
+    background: linear-gradient(#fad9aa,#fcc679);
+}
 thead.float {
     background-color: white;
 }
+
 
 
 /*  Cmder Themed
