--- a/common/css/Scannie_css.css
+++ b/common/css/Scannie_css.css
@@ -115,6 +115,17 @@ span.go-icon {
     font-size: 10px;
 }
 
+/* Global Classes*/
+.lg-w {
+    width: 800px;
+}
+.md-w {
+    width: 500px;
+}
+.sm-w {
+    width: 250px;
+}
+
 
 
 /*  Cmder Themed
