--- a/common/css/Scannie_css.css
+++ b/common/css/Scannie_css.css
@@ -2,11 +2,11 @@
     Globally Used Style
 */
 body {
-    background: linear-gradient(white, #edf7fc);
+    //background: linear-gradient(white, #edf7fc);
     background-size: 100% 100%;
     background-attachment: fixed;
-    background-image: url("../src/img/blueGrad.png");
-    //background-repeat: no-repeat;
+    background-image: url("../src/img/bluelines.png");
+    background-repeat: no-repeat;
 }
 #border {
     border: 10px solid transparent;
@@ -52,7 +52,7 @@ body {
     background: #c674cc; /* For browsers that do not support gradients */
     background: linear-gradient(#d9b2db,#c674cc); /* Standard syntax */
     color: white;
-    border: 1px solid #f2b6e1;	
+    border: 1px solid #f2b6e1;
 }
 .text-surprise {
     color: #c674cc;
@@ -81,7 +81,6 @@ body {
     background: linear-gradient(#d9b2db,#c674cc); /* Standard syntax */
     color: #6a356e;
 }
-
 .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
    background-color: #e0e0e0;
 }
@@ -91,7 +90,7 @@ body {
 td.highlight:hover, tr.highlight:hover  {
     background-color: #f2f2f2;
 }
-td.bhighlight:hover, 
+td.bhighlight:hover,
 tr.bhighlight:hover {
     background-color: #fcc679;
     background: linear-gradient(#fad9aa,#fcc679);
@@ -103,7 +102,6 @@ tr.click-highlight {
 thead.float {
     background-color: white;
 }
-
 /*
     Pre-loaded Images
 */
@@ -133,11 +131,11 @@ span.delete-icon {
     display: inline-block;
     width: 20px;
     height: 20px;
+    cursor: pointer;
 }
 .text-tiny {
     font-size: 10px;
 }
-
 /*
     Quick Div Widths
 */
@@ -150,7 +148,31 @@ span.delete-icon {
 .sm-w {
     width: 250px;
 }
-
+/*
+    Menu Styles
+*/
+.menuIcon {
+    padding: 14px;
+    cursor: pointer;
+}
+.fixedCalc {
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    height: 300px;
+    border: 0.5px solid #cacaca;
+    border-radius: 5px;
+    box-shadow: 5px 5px 3px #cacaca;
+}
+.backToTop {
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    opacity: 0.4;
+}
+.backToTop:hover {
+    cursor: pointer;
+}
 /*
     Vertical Alignment Helper
 */
