add padding for calc quickkeys

--- a/common/css/Scannie_css.css
+++ b/common/css/Scannie_css.css
@@ -152,7 +152,10 @@ span.delete-icon {
     Menu Styles
 */
 .menuIcon {
-    padding: 14px;
+    padding-top: 14px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
     cursor: pointer;
 }
 .fixedCalc {
