--- a/common/css/Scannie_css.css
+++ b/common/css/Scannie_css.css
@@ -176,6 +176,31 @@ span.delete-icon {
 .backToTop:hover {
     cursor: pointer;
 }
+.mobileMenuIcon {
+    position: fixed;
+    top: 20px;
+    right: 15px;
+    cursor: pointer;
+    height: 25px;
+    opacity: 0.33;
+}
+.mobileMenu {
+    position: fixed;
+    top: 0px;
+    left: 15px;
+    background-color: black;
+    color: #cacaca;
+    width: 100%;
+    border-bottom-left-radius: 5px;
+    opacity: 0.9;
+}
+.mobileHeader {
+    font-weight: bold;
+    font-size: 22px;
+    list-style-type: none;
+    padding: 10px;
+    cursor: pointer;
+}
 /*
     Vertical Alignment Helper
 */
