--- a/common/css/Scannie_css.css
+++ b/common/css/Scannie_css.css
@@ -252,6 +252,7 @@ span.delete-icon {
     cursor: pointer;
     height: 25px;
     opacity: 0.33;
+    z-index: 998;
 }
 .numbpadMenuIcon {
     position: fixed;
@@ -270,6 +271,7 @@ span.delete-icon {
     width: 100%;
     border-bottom-left-radius: 5px;
     opacity: 0.9;
+    z-index: 999;
 }
 .mobileHeader {
     font-weight: bold;
@@ -422,6 +424,11 @@ iframe.menu {
 #mainNav {
     background-color: rgba(36, 41, 46, 1);
     //background-color: white;
+    background-image: repeating-linear-gradient(to bottom,
+        rgb(36, 41, 46) 7%,
+        rgb(63, 68, 72) 10%,
+        rgb(36, 41, 46) 15%);
+    background-size: 2px;
     border:none;
     width: 1400px;
     //width: 100%;
@@ -429,6 +436,11 @@ iframe.menu {
 }
 div.mainNavBox {
     background-color: rgba(36, 41, 46, 1);
+    background-image: repeating-linear-gradient(to bottom,
+        rgb(36, 41, 46) 7%,
+        rgb(63, 68, 72) 10%,
+        rgb(36, 41, 46) 15%);
+    background-size: 2px;
 }
 #searchbar {
     background-color: rgba(63, 68, 72, 1);
@@ -460,7 +472,12 @@ p.navText{
     width: 100px;
     float: left;
     margin-top: 5px;
-    margin-left: 130px;
+    margin-left: 0px;
     left-padding: 10px;
     font-weight: bold;
+}
+@media only screen and (min-width: 1170px) {
+    p.navText{
+        margin-left: 130px;
+    }
 }
