--- a/common/css/Scannie_css.css
+++ b/common/css/Scannie_css.css
@@ -6,6 +6,9 @@ body {
     background-size: 1px;
     //background: -moz-repeating-linear-gradient( #f2f0ed, #f5f0eb 5px);
 }
+.red {
+    color: red;
+}
 .green {
     color: green;
 }
@@ -126,6 +129,12 @@ body {
 }
 .menuNav {
     font-weight: bold;
+}
+.nav, .navbar-nav {
+    color: orange;
+}
+.navbar > .dropdown:active {
+    color: lightblue;
 }
 td.highlight:hover, tr.highlight:hover  {
     background-color: #f2f2f2;
@@ -281,15 +290,21 @@ span.delete-icon {
     cursor: pointer;
 }
 #search-resp {
-    border-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     text-align: right;
-    position: relative; 
+    position: absolute; 
     top: 0;
-    right: 50;
+    right: 0px;
+    margin-top: 50px;
     max-width: 300px;
     float: right;
+    z-index: 997;
+    background-color: rgba(46, 62, 56, 0.8);
 }
-
+a.search-resp {
+    color: white;
+}
 /*
     Panels
 */
@@ -433,6 +448,10 @@ iframe.menu {
     width: 1400px;
     //width: 100%;
     height: 0px;
+}
+.navbar, .navbar-default,
+.nav, .navbar-nav {
+    color: orange;
 }
 div.mainNavBox {
     background-color: rgba(36, 41, 46, 1);
