--- a/ScannieV2/common/css/commonInterface.css
+++ b/ScannieV2/common/css/commonInterface.css
@@ -3,9 +3,9 @@
 */
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgba(255,255,255,0.9);
-    background: linear-gradient(135deg, #42a7f4, #0a1528);
-    background-color: linear-gradient(135deg, #42a7f4, #0a1528);
+    //background-color: rgba(255,255,255,0.9);
+    //background: linear-gradient(135deg, #42a7f4, #0a1528);
+    //background-color: linear-gradient(135deg, #42a7f4, #0a1528);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -72,33 +72,30 @@ img.icon {
 /*
     Core Navigation
 */
-div.titleLogo {
-    position: relative;
-    max-width: 500px;
-    width: 85vw;
+.navbar {
+    background: orange;
+    // margin-bottom: 0px;
 }
-img.titleLogo {
-    position: relative;
-    max-width: 500px;
-    width: 85vw;
+div.control-center {
+    //background: #343A40;
+    //margin: -15px;
+    padding: 15px;
+    z-index: 999;
+    color: #CACACA;
+    display: none;
 }
-div.navBar {
-    position: absolute;
-    max-width: 500px;
-    bottom: -40px;
-    left: 0px;
-    width: 85vw;
+div.toggle-control-center {
+    position: absolute; 
+    bottom: -24px;
+    width: 25px;
+    right: 0px;
+    background: #343A40;
+    color: #CACACA;
+    cursor: pointer;
 }
-span.navNav {
-    margin-left: 25px;
-    margin-right: 25px;
-}
-a.navNav {
-    text-decoration: none;
-    color: black;
-    font-size: 18px;
-    font-weight: bold;
-    text-shadow: 1px 1px lightblue;
+div.login-nav {
+    background: darkgrey;
+    width: 100px;
 }
 /*
     Page Style
@@ -294,4 +291,10 @@ a.mobileHeader:hover{
         left: 0;
         right: 0;
     }
+}
+/*
+    Navbar
+*/
+.mynav {
+    // margin-bottom: 15px;
 }
