--- a/ScannieV2/common/css/commonInterface.css
+++ b/ScannieV2/common/css/commonInterface.css
@@ -11,6 +11,7 @@ body {
 }
 #nav-search-container {
     position: relative;
+    z-index: 999;
 }
 #search-resp {
     position: absolute;
@@ -109,7 +110,6 @@ img.icon {
     position: absolute;
     top: 55px;
     right: 0px;
-    //height: 100%;
     background: repeating-linear-gradient(#343A40,  #565E66, #343A40 5px); 
     z-index: 999;
     width: 50%;
@@ -361,4 +361,17 @@ a.mobileHeader:hover{
 */
 .mynav {
     // margin-bottom: 15px;
+}
+/*
+    UI
+*/
+.backToTop {
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    opacity: 0.4;
+    z-index: 999;
+}
+.backToTop:hover {
+    cursor: pointer;
 }
