--- a/ScannieV2/common/css/commonInterface.css
+++ b/ScannieV2/common/css/commonInterface.css
@@ -3,9 +3,6 @@
 */
 body {
     font-family: Arial, Helvetica, sans-serif;
-    //background-color: rgba(255,255,255,0.9);
-    //background: linear-gradient(135deg, #42a7f4, #0a1528);
-    //background-color: linear-gradient(135deg, #42a7f4, #0a1528);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -24,6 +21,11 @@ body {
     //padding-bottom: 15px;
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
+}
+div.nav-label {
+    background: repeating-linear-gradient(white,  lightgrey, white 5px); 
+    color: #343A40;
+    text-shadow: 1px 1px lightgrey;
 }
 a.search-resp {
     color: #CACACA;
@@ -118,6 +120,8 @@ img.icon {
     padding: 25px;
     margin: 25px;
     background: rgba(255, 255, 255, 0.9);
+    overflow-y: scroll;
+    max-height: 85vh;
 }
 .pre {
     font-family: consolas;
