make print friendly

--- a/ScannieV2/common/css/commonInterface.css
+++ b/ScannieV2/common/css/commonInterface.css
@@ -400,3 +400,14 @@ a.mobileHeader:hover{
 .backToTop:hover {
     cursor: pointer;
 }
+/*
+    Dont Print
+*/
+
+@media print
+{    
+    .no-print, .no-print *
+    {
+        display: none !important;
+    }
+}
